--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
+    <!--список предыдущих запросов -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/requestList"
         android:layout_width="match_parent"
@@ -24,6 +25,18 @@
         android:visibility="gone"
         android:layout_width="40dp"
         android:layout_height="40dp"/>
+
+    <!--информация о текущем запросе -->
+    <TextView
+        android:id="@+id/requestInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@+id/requestInfo" />
 
     <TextView
         android:id="@+id/errorTitle"
