--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,5 +60,16 @@
         app:layout_constraintTop_toBottomOf="@+id/errorTitle"
         android:text="@string/try_again"/>
 
+    <Button
+        android:id="@+id/requestButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/errorTitle"
+        android:text="@string/requset"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
