--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 <!--LinearLayout, в одной части информация о текущем запросе/спиннер и перезагрузка, в другой список -->
-    <!--список предыдущих запросов -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/requestList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:ignore="MissingClass,MissingConstraints" />
+    <!--список предыдущих запросов. -->
 
+<!--Первый LinearLayout -->
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="40dp"
@@ -70,6 +63,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/errorTitle" />
+
+    <!--второй LinearLayout -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/requestList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:ignore="MissingClass,MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
